<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/popup_bg" >

    <ImageView
        android:id="@+id/imageViewReachedIntake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bo_final"/>

    <TextView
        android:id="@+id/textViewReachedIntake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewReachedIntake"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/reached_intake"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewReachedIntake"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textColor="@color/blue"
            android:background="@drawable/button_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/or"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/buttonTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textColor="@color/blue"
            android:background="@drawable/button_selector" />

    </LinearLayout>

</RelativeLayout>