<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBlue"
    tools:context=".activities.StartActivity">

    <ScrollView
        android:id="@+id/ScrollViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/important_notice"
                android:textColor="@color/darkBlue"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/start__who_recommendation"
                android:textColor="@color/darkBlue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/start__note"
                android:textColor="@color/darkBlue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center"
                android:text="@string/start__footnote"
                android:textColor="@color/darkBlue" />

            <Button
                android:id="@+id/btnGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_tiny"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_tiny"
                android:text="@string/start__proceed"
                android:textColor="@color/black"
                android:background="@drawable/button_selector" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>