<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".activities.ResultActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/result"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightBlue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/your_babys_daily_iron_intake"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium_lower" />

    <include layout="@layout/final_result_bar" />

    <TextView
        android:id="@+id/textViewResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/textViewResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightGrey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/iron_rich_foods_for_your_baby"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_medium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightGrey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/productsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/btnBack" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/margin_small"
            android:src="@drawable/button_back_to_calculate"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_small"
            android:src="@drawable/button_close"
            android:background="@android:color/transparent" />

    </RelativeLayout>

</LinearLayout>
