<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_large"
    android:layout_marginRight="@dimen/margin_large" >

    <LinearLayout
        android:id="@+id/finalResultBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/final_bar_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <View
            android:id="@+id/viewDairyPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@color/lightBlue"/>

        <View
            android:id="@+id/viewCerealPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@color/orange"/>

        <View
            android:id="@+id/viewFruitsPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@color/green"/>

        <View
            android:id="@+id/viewMeatPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@color/reddish"/>

        <View
            android:id="@+id/viewEmptyPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"
        android:layout_alignBottom="@+id/finalResultBarLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/finalResultBarLayout"
        android:orientation="horizontal" >

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalResultBarLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:gravity="start"
            android:text="@string/zero"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center_horizontal"
            android:text="@string/twenty_five"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center_horizontal"
            android:text="@string/fifty"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center_horizontal"
            android:text="@string/seventy_five"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".125"
            android:gravity="end"
            android:text="@string/hundred_percent"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

</RelativeLayout>